--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@
 # You can change `author1` to your shortname.
 author1:
   # Replace <...> with your own (remove the < >)
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Jessica Chen
+  email:             jessica@jiqiyu.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -26,12 +26,12 @@ author1:
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
-    twitter:         jekyllrb
-    github:          qwtel/hydejack
+    # twitter:         jekyllrb
+    # github:          qwtel/hydejack
     # download:        <url>
-    # email:           <mail@domain.tld>
+    email:           jessica@jiqiyu.com
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:        JessicaChen2016
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -40,7 +40,7 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
+    instagram:       jessica_chen_2016
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
