--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Please Email or DM me for any commission enquiries.
-  
+  Please Email or DM me for commission enquiries.
   Let's go miles ahead and be awesome together.
 
 # A list of keywords for your blog
