--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
+  Also a comic/graphic novel fan and creator.
   Please Email or PM me for commission enquiries.
-  Let's go miles ahead and be awesome together.
 
 # A list of keywords for your blog
 keywords:              []
